<?xml version="1.0"?>
<package format="2">
  <name>raspicam2</name>
  <version>0.2.1</version>
  <description>Package to access the Raspberry Pi Camera from ROS2.</description>

  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <author email="send2arohan@gmail.com">Rohan Agrawal</author>
  <author email="wayne@gramlich.net">Wayne Gramlich</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
